--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "bootstrap": "^5.2.0",
+    "framer-motion": "^4.1.17",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-modal-sheet": "^1.5.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
+    "save": "^2.5.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "actionsheet-react": "^1.0.14",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
